# codebase-rag-eval

./: pyproject.toml  scratch_smoke.py
src/: agent.py  tools.py
